2003-06-04  Stepan Kasal  <kasal@ucw.cz>
	* src/dfa.c: typos fixed.

2003-05-30  Bernhard Rosenkraenzer <bero@arklinux.org>
	* src/dfa.c: Speed up multibyte support (Patch from Tim Waugh)

2003-01-18  Bernhard Rosenkraenzer <bero@arklinux.org>
	* src/grep.c: Fix -i -o combination (Patch from Tim Waugh)

2002-03-26  Bernhard Rosenkraenzer <bero@arklinux.org>
	* src/grep.c: Don't fail if we don't have an stdout fd and -q
	  is used (happens e.g. on calls from hotplug scripts)
	* src/grep.c: Don't hang forever if fed with an empty string to
	  grep for and --color enabled
	* src/grep.c: Fix infinite loop on
	  echo "1 one" | grep -E "[0-9]*" -o
	  echo "1 one" | grep -E "[0-9]*" --color
	* po/*: Sync with translation project
	* src/grep.c, src/Makefile.am, configure.in: Add patch from
	  Paul Eggert <eggert@twinsun.com> to comply with ridiculous
	  guidelines (don't act differently if invoked as egrep or fgrep)
	* configure.in: Bump version number, require a recent autoconf

2002-03-14  Bernhard Rosenkraenzer <bero@arklinux.org>
	* src/Makefile.am, po/Makefile.in.in: Support DESTDIR properly
	* tests/bre.tests: Add fix from
	  Peter Breitenlohner <peb@mppmu.mpg.de>

2002-03-13  Bernhard Rosenkraenzer <bero@arklinux.org>
	* configure.in, m4/regex.m4, m4/malloc.m4, m4/realloc.m4:
	  Don't set LIBOBJS directly, autoconf 2.53 doesn't like it
	* intl/*: Sync with gettext 0.11
	* po/*: Sync with translation project
	* configure.in, src/Makefile.am: Don't duplicate code - make
	  egrep and fgrep links to grep and set matcher based on
	  application name, suggestion from
	  Guillaume Cottenceau <gc@mandrakesoft.com>
	* src/grep.c: (prline) Add fix for -i --color from
	  Jim Meyering <meyering@lucent.com>
	* configure.in: Version 2.5; release

2002-01-23  Bernhard Rosenkraenzer <bero@arklinux.org>
	* configure.in: Version 2.5g
	* Makefile.cvs, grep.spec: Add packaging tools
	Merge djgpp changes from Andrew Cottrell <anddjgpp@ihug.coml.au>: